# analytics-launcher-script

./: README.md  analytics-startup.cabal  stack.yaml
plans/: default-on-prem.json  default-saas.json  on-prem-multi-node.json  saas-multi-cluster.json  saas-multi-node.json
src/: Main.hs
