name:                analytics-startup
version:             0.1.0.0
homepage:            https://github.com/githubuser/analytics-startup#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable analytics-startup
  hs-source-dirs:       src
  main-is:              Main.hs
  default-language:     Haskell2010
  ghc-options:          -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , ConfigFile
                     , mtl
                     , retry
                     , wreq
                     , lens
                     , concurrent-extra
                     , managed
                     , process
                     , text
                     , unix
                     , aeson
                     , bytestring
                     , system-filepath
                     , monad-parallel
                     , transformers
                     , tuple